--- a/_articles/RJ-2023-026/RJ-2023-026.tex
+++ b/_articles/RJ-2023-026/RJ-2023-026.tex
@@ -56,9 +56,7 @@ As the number of bins decreases, the lines become smoother and more regular, how
 \texttt{VPCgraph} provides the automatic binning with \texttt{optK} and \texttt{makeCOVbin}; here, \texttt{optK} finds the optimal number of bins, and \texttt{makeCOVbin} finds the optimal cutoffs of bins using Lavielle and Bleakley's method.
 
 \begin{figure}
-\centering
-\includegraphics{RJ-2023-026_files/figure-latex/Fig0-1.pdf}
-\caption{\label{fig:Fig0}The visual predictive check plot. The solid red line represents the \(50^{th}\) percentile of the observed data, and dashed red lines represent the \(10^{th}\) and \(90^{th}\) percentiles of the observed data. The solid blue line represents the \(50^{th}\) percentile of the simularted data, and dashed blue lines represent the \(10^{th}\) and \(90^{th}\) percentiles of the simulated data. Light blue and pink areas represent the 95\% confidence areas of the \(10^{th}\), \(50^{th}\) and \(90^{th}\) percentile lines.}
+\includegraphics[width=1\linewidth]{RJ-2023-026_files/figure-latex/Fig0-1} \caption{The visual predictive check plot. The solid red line represents the $50^{th}$ percentile of the observed data, and dashed red lines represent the $10^{th}$ and $90^{th}$ percentiles of the observed data. The solid blue line represents the $50^{th}$ percentile of the simularted data, and dashed blue lines represent the $10^{th}$ and $90^{th}$ percentiles of the simulated data. Light blue and pink areas represent the 95\% confidence areas of the $10^{th}$, $50^{th}$ and $90^{th}$ percentile lines.}\label{fig:Fig0}
 \end{figure}
 
 \hypertarget{additive-quantile-regression-vpc}{%
@@ -68,9 +66,7 @@ To overcome the difficulties of making bins as well as determining the number of
 Jamsen et al. (2018) used additive quantile regression to calculate the quantiles of the observed and simulated data. This regression method makes it possible to estimate quantiles without discrete binning, which is especially useful when the data are insufficient, irregular, or inappropriate to configure the bins. To fit the additive quantile regression, we used the \texttt{rqss} function in the \CRANpkg{quantreg} (Koenker 2023) package and developed the \texttt{aqrVPC} function to draw the VPC type plot with additive quantile regression. Figure \ref{fig:Fig1} shows the additive quantile regression VPC plot. The solid and dashed lines represent the \(10^{th}\), \(50^{th}\), and \(90^{th}\) additive quantile regression lines of the observed data, and the pink and light blue areas represent the confidence areas of the additive quantile regression lines of the simulated data. Lines and areas in the additive quantile regression VPC plot are much smoother than those in the original VPC plot.
 
 \begin{figure}
-\centering
-\includegraphics{RJ-2023-026_files/figure-latex/Fig1-1.pdf}
-\caption{\label{fig:Fig1}The additive equantile VPC plot. Dots indicate the observed data. The solid and dashed blue lines represent the \(10^{th}\), \(50^{th}\), and \(90^{th}\) percentiles of the simulated data. The solid red line represents the \(50^{th}\) percentile line. Light blue and pink areas represent the 95\% confidence areas of the \(10^{th}\), \(50^{th}\) and \(90^{th}\) percentile lines.}
+\includegraphics[width=1\linewidth]{RJ-2023-026_files/figure-latex/Fig1-1} \caption{The additive equantile VPC plot.  Dots indicate the observed data. The solid and dashed blue lines represent the $10^{th}$, $50^{th}$, and $90^{th}$ percentiles of the simulated data. The solid red line represents the $50^{th}$ percentile line. Light blue and pink areas represent the 95\% confidence areas of the $10^{th}$, $50^{th}$ and $90^{th}$ percentile lines.}\label{fig:Fig1}
 \end{figure}
 
 \hypertarget{bootstrap-vpc}{%
@@ -83,9 +79,7 @@ Figure \ref{fig:Fig2} shows the bootstrap VPC plot using \texttt{bootVPC}. The s
 then this is evidence that the fitted model fit the observed data well.
 
 \begin{figure}
-\centering
-\includegraphics{RJ-2023-026_files/figure-latex/Fig2-1.pdf}
-\caption{\label{fig:Fig2}The bootstrap VPC plot. Dots indicate the observed data. The solid and dashed blue lines represent the \(10^{th}\), \(50^{th}\), and \(90^{th}\) percentiles of the simulated data. The solid red line represents the \(50^{th}\) percentile line, and the pink areas represent the 95\% confidence areas of the \(50^{th}\) percentile line, calculated from the bootstrap samples of the observed data.}
+\includegraphics[width=1\linewidth]{RJ-2023-026_files/figure-latex/Fig2-1} \caption{The bootstrap VPC plot. Dots indicate the observed data. The solid and dashed blue lines represent the $10^{th}$, $50^{th}$, and $90^{th}$ percentiles of the simulated data. The solid red line represents the $50^{th}$ percentile line, and the pink areas represent the 95\% confidence areas of the $50^{th}$ percentile line, calculated from the bootstrap samples of the observed data.}\label{fig:Fig2}
 \end{figure}
 
 \hypertarget{average-shifted-vpc}{%
@@ -150,9 +144,7 @@ In the asVPC plot, the observations in each bin are combined using weights. Typi
 Figure \ref{fig:Fig3} shows the results from the \texttt{asVPC} function using bin-related weights and distance-related weights. The solid and dashed lines represent the average shifted quantile lines of the observed data, and the pink and light blue areas represent the confidence areas of the simulated data. The lines in the asVPC plot are smoother than those in the original VPC plot, and the confidence areas in the asVPC plot are thinner than those in the original VPC plot.
 
 \begin{figure}
-\centering
-\includegraphics{RJ-2023-026_files/figure-latex/Fig3-1.pdf}
-\caption{\label{fig:Fig3}The average shifted VPC plot. Dots indicate the observed data. The solid line represents the 50th quantiles of the observed data, and dashed lines represent the \(10^{th}\) and \(90^{th}\) percentiles of the observed data. Light blue and pink areas represent the 95\% confidence areas of the \(10^{th}\), \(50^{th}\), and \(90^{th}\) percentiles.}
+\includegraphics[width=1\linewidth]{RJ-2023-026_files/figure-latex/Fig3-1} \caption{The average shifted VPC plot. Dots indicate the observed data. The solid line represents the 50th quantiles of the observed data, and dashed lines represent the $10^{th}$ and $90^{th}$ percentiles of the observed data. Light blue and pink areas represent the 95\% confidence areas of the $10^{th}$, $50^{th}$, and $90^{th}$ percentiles.}\label{fig:Fig3}
 \end{figure}
 
 \hypertarget{validation-in-the-model-space}{%
@@ -225,9 +217,7 @@ The percentages of observations above the prediction interval are calculated in 
 Figure \ref{fig:Fig4}(B) is the result of \texttt{coverageDetailplot} when the prediction level is 80\(\%\). The white dots represent the expected percentages of the lower and upper the prediction intervals, 10\(\%\), and 90\(\%\), respectively. The upper and lower percentages of observation in each time bin are shown in darker gray. The left bin(before 0.045 hours) shows all light gray in the coverage detailed plot, and it is quite different patterns from the expected one. However, it is mainly due to the characteristics of this example data. All observations in this bin are 0. It makes the lower and upper bound of the prediction interval all 0, and the lower and upper percentages become 0.
 
 \begin{figure}
-\centering
-\includegraphics{RJ-2023-026_files/figure-latex/Fig4-1.pdf}
-\caption{\label{fig:Fig4}The coverage plot and the coverage detailed plot for the 80\% prediction interval. In the coverage plot, the X-axis is the level of the prediction interval. The Y-axis is the ratio between the number of observed data and the number of expected data of the lower and upper parts in each level of the prediction interval. The white line is the reference line, and the gray area represents the confidence area of the ratios. If the solid lines are near the white line, we can conclude that the suggested model is suitable. In the coverage detailed plot, the white dots represent the expected percentages of lower and upper prediction intervals of, 10\%, and 90\%, respectively. The upper and lower percentages of observation in each time bin are darker gray.}
+\includegraphics[width=0.9\linewidth]{RJ-2023-026_files/figure-latex/Fig4-1} \caption{The coverage plot and the coverage detailed plot for the 80\% prediction interval. In the coverage plot, the X-axis is the level of the prediction interval. The Y-axis is the ratio between the number of observed data and the number of expected data of the lower and upper parts in each level of the prediction interval. The white line is the reference line, and the gray area represents the confidence area of the ratios. If the solid lines are near the white line, we can conclude that the suggested model is suitable. In the coverage detailed plot, the white dots represent the expected percentages of lower and upper prediction intervals of, 10\%, and 90\%, respectively. The upper and lower percentages of observation in each time bin are darker gray.}\label{fig:Fig4}
 \end{figure}
 
 \hypertarget{quantified-vpc}{%
@@ -241,9 +231,7 @@ If the model is appropriate, observations at each time bin are allocated randoml
 Figure \ref{fig:Fig5} shows the result of \texttt{quantVPC}. The darker gray areas represent the percentages below the median. The lighter gray areas represent the percentage above. The brightest gray areas represent the percent unavailable in each time bin. The white dots represent the ideal location where the above and the below percentages meet. In this example, there is no missing value.
 
 \begin{figure}
-\centering
-\includegraphics{RJ-2023-026_files/figure-latex/Fig5-1.pdf}
-\caption{\label{fig:Fig5}The quantified VPC plot. The darker gray areas represent the percentages below the median, the lighter gray areas represent the percentage above, and the brightest gray areas represent the percent unavailable in each time bin. The white dots represent the ideal location where the above and the below percentages meet.}
+\includegraphics[width=1\linewidth]{RJ-2023-026_files/figure-latex/Fig5-1} \caption{The quantified VPC plot. The darker gray areas represent the percentages below the median, the lighter gray areas represent the percentage above, and the brightest gray areas represent the percent unavailable in each time bin. The white dots represent the ideal location where the above and the below percentages meet.}\label{fig:Fig5}
 \end{figure}
 
 \hypertarget{the-nlmevpc-package-structure-and-functionality}{%
@@ -393,23 +381,17 @@ Figure \ref{fig:M11} shows the \texttt{VPCgraph} for Model 1 and Model 2.
 The solid line represents the 50\(^{th}\) percentile of the observed data, and the dashed lines represent the 10\(^{th}\) and 90\(^{th}\) percentiles of the observed data. In Model 1, all quantile lines (the solid and dashed lines) are in the confidence area. However, the 10\(^{th}\) and 90\(^{th}\) percentiles in Model 2 are mostly outside the confidence area, especially at 0 to 5 hours.
 
 \begin{figure}
-\centering
-\includegraphics{RJ-2023-026_files/figure-latex/M11-1.pdf}
-\caption{\label{fig:M11}The VPC plots of Model 1 and Model 2.}
+\includegraphics[width=1\linewidth]{RJ-2023-026_files/figure-latex/M11-1} \caption{The VPC plots of Model 1 and Model 2.}\label{fig:M11}
 \end{figure}
 
 Figure \ref{fig:M12} shows the results of \texttt{aqrVPC}, and Figure \ref{fig:M13} shows the results of \texttt{asVPC} for Model 1 and Model 2. The additive quantile regression VPCs and the average shifted VPCs show similar patterns to the original VPCs. Model 1 shows all quantile lines in the confidence area, and the 10\(^{th}\) and 90\(^{th}\) percentiles in Model 2 are mostly outside the confidence area.
 
 \begin{figure}
-\centering
-\includegraphics{RJ-2023-026_files/figure-latex/M12-1.pdf}
-\caption{\label{fig:M12}The additive quantile regression VPC plots for Model 1 and Model 2.}
+\includegraphics[width=1\linewidth]{RJ-2023-026_files/figure-latex/M12-1} \caption{The additive quantile regression VPC plots for Model 1 and Model 2.}\label{fig:M12}
 \end{figure}
 
 \begin{figure}
-\centering
-\includegraphics{RJ-2023-026_files/figure-latex/M13-1.pdf}
-\caption{\label{fig:M13}The average shifted VPC plots for Model 1 and Model 2.}
+\includegraphics[width=1\linewidth]{RJ-2023-026_files/figure-latex/M13-1} \caption{The average shifted VPC plots for Model 1 and Model 2.}\label{fig:M13}
 \end{figure}
 
 Figure \ref{fig:M14} shows the results of \texttt{bootVPC} for Model 1 and Model 2. The solid and dashed blue lines show the \(10^{th}\), \(50^{th}\), and \(90^{th}\) percentiles of the simulated data. The solid red line represents the \(50^{th}\) percentile line of the observed data, and the pink areas represent the 95\(\%\) confidence areas of the \(50^{th}\) percentile line, calculated from the bootstrap samples of the observed data.
@@ -417,30 +399,22 @@ The solid blue line is in the pink area, and the two solid red and blue lines ar
 The dashed blue lines in Model 1 cover most of the observed data. However, the dashed blue lines in Model 2 do not cover the observed data. Many observed data points lie outside these dashed blue lines in Model 2, especially in 0 to 10 hours.
 
 \begin{figure}
-\centering
-\includegraphics{RJ-2023-026_files/figure-latex/M14-1.pdf}
-\caption{\label{fig:M14}The bootstrap VPC plots for Model 1 and Model 2.}
+\includegraphics[width=1\linewidth]{RJ-2023-026_files/figure-latex/M14-1} \caption{The bootstrap VPC plots for Model 1 and Model 2.}\label{fig:M14}
 \end{figure}
 
 \begin{figure}
-\centering
-\includegraphics{RJ-2023-026_files/figure-latex/M15-1.pdf}
-\caption{\label{fig:M15}The coverage plots for Model 1 and Model 2.}
+\includegraphics[width=1\linewidth]{RJ-2023-026_files/figure-latex/M15-1} \caption{The coverage plots for Model 1 and Model 2.}\label{fig:M15}
 \end{figure}
 
 Figure \ref{fig:M15} shows the \texttt{coverageplot} results for Model 1 and Model 2. The lines are in the gray area and close to the white line in Model 1. However, the lines in Model 2 are not in the gray area, especially when the PI value is large. Figures \ref{fig:M16} and \ref{fig:M17} show the results of \texttt{coverageDetailplot} for Model 1 and Model 2 when PIs are 50\(\%\) and 80\(\%\).
 The upper and lower percentages in both figures are close to the white points in Model 1. On the other hand, the upper percentages of the most time bins are far from the white points in Model 2, especially the time bin (3.54,5.28{]} when PI = 50\(\%\). When PI = 80\(\%\), most upper and lower percentages are far from the white points.
 
 \begin{figure}
-\centering
-\includegraphics{RJ-2023-026_files/figure-latex/M16-1.pdf}
-\caption{\label{fig:M16}The coverage detailed plots for Model 1 and Model 2 when PI=50\%.}
+\includegraphics[width=1\linewidth]{RJ-2023-026_files/figure-latex/M16-1} \caption{The coverage detailed plots for Model 1 and Model 2 when PI=50\%.}\label{fig:M16}
 \end{figure}
 
 \begin{figure}
-\centering
-\includegraphics{RJ-2023-026_files/figure-latex/M17-1.pdf}
-\caption{\label{fig:M17}The coverage detailed plots for Model 1 and Model 2 when PI=80\%.}
+\includegraphics[width=1\linewidth]{RJ-2023-026_files/figure-latex/M17-1} \caption{The coverage detailed plots for Model 1 and Model 2 when PI=80\%.}\label{fig:M17}
 \end{figure}
 
 Figure \ref{fig:M18} shows the results of \texttt{quantVPC} for Model 1 and Model 2. In Model 2, the right tail area (after 11 hours) looks quite different from the expected pattern. The above percentages are much larger than the below percentages.
@@ -448,9 +422,7 @@ Figure \ref{fig:M18} shows the results of \texttt{quantVPC} for Model 1 and Mode
 The results from Figure \ref{fig:M11} through Figure \ref{fig:M18} show that Model 1 explains the \texttt{origdata} quite well. However, Model 2 shows different patterns than Model 1 in most figures. We can conclude that Model 1 is better than Model 2, and treating \(Ka\) and \(Cl\) as random effects is better.
 
 \begin{figure}
-\centering
-\includegraphics{RJ-2023-026_files/figure-latex/M18-1.pdf}
-\caption{\label{fig:M18}The quantified VPC plots for Model 1 and Model 2.}
+\includegraphics[width=1\linewidth]{RJ-2023-026_files/figure-latex/M18-1} \caption{The quantified VPC plots for Model 1 and Model 2.}\label{fig:M18}
 \end{figure}
 
 \hypertarget{summary}{%
@@ -546,7 +518,6 @@ Wickham, Hadley, Dianne Cook, and Heike Hofmann. 2015. {``Visualizing Statistica
 
 \end{CSLReferences}
 
-\bibliography{EunKyung\_Lee.bib}
 
 \address{%
 Eun-Hwa Kang\\
