minor fixes to 2023-2

--- a/_articles/RJ-2023-046/RJ-2023-046.Rmd
+++ b/_articles/RJ-2023-046/RJ-2023-046.Rmd
@@ -1,6 +1,5 @@
 ---
-title: '\pkg{langevitour}: Smooth Interactive Touring of High Dimensions, Demonstrated
-  with scRNA-Seq Data'
+title: 'langevitour: Smooth Interactive Touring of High Dimensions, Demonstrated with scRNA-Seq Data'
 abstract: |
   \CRANpkg{langevitour} displays interactive animated 2D projections of high-dimensional datasets.
   Langevin Dynamics is used to produce a smooth path of projections. Projections are initially explored at random. A "guide" can be activated to look for an informative projection, or variables can be manually positioned. After a projection of particular interest has been found, continuing small motions provide a channel of visual information not present in a static scatter plot.
