--- a/_news/RJ-2023-2-editorial/RJ-2023-2-editorial.Rmd
+++ b/_news/RJ-2023-2-editorial/RJ-2023-2-editorial.Rmd
@@ -33,7 +33,7 @@ On behalf of the editorial board, I am pleased to present Volume 15 Issue 2 of t
 
 Behind the scenes, several people assist with the journal operations. Mitchell O'Hara-Wild continues to work on infrastructure, H. Sherry Zhang continues to develop the \CRANpkg{rjtools} package under the direction of Professor Dianne Cook. In addition, articles in this issue have been carefully copy edited by Adam Bartonicek and Chase Robertson.
 
-## In this issue
+# In this issue {-}
 
 This issue features 18 contributed research articles the
 majority of which relate to R packages on a diverse range of
