Add details to contribute.Rmd

--- a/contribute.Rmd
+++ b/contribute.Rmd
@@ -12,9 +12,13 @@ d-article > * {
 }
 ```
 
-TBC
+If you would like to report a problem with a published paper, whether it is your own or not, you can contact the current editor at r-journal@r-project.org, or create an issue on the Github site https://github.com/rjournal/rjournal.github.io. 
 
-Information on...
-* how to report a problem with a paper
-* make suggestions
-* join the reviewer pool. 
+This is the same approach that can be used to make suggestions. 
+
+If it is your own paper, and you know how to fix the problem, you would be welcome to make a pull request with the fix.
+
+We are always in need of reviewers, and welcome you to add your name to the list of potential reviewers through [this form](https://docs.google.com/forms/d/e/1FAIpQLSf8EmpF85ASWqPHXqV0vdQd-GHhNBaAZZEYf4qxO3gTl-eGyA/viewform). Reviewers enhance the quality of the journal and help make the journal useful for the community.
+
+If you are interested in becoming an Associate Editor, you should directly contact the current editor, along with a list of keywords that describe your expertise chosen from the list provided by `rjtools::keywords`. Associate editors handle 2-4 articles per month, managing obtaining reviews, and writing a summary of the reviews for the Editor. 
+
