Small details on AE role in  contribute.Rmd

--- a/contribute.Rmd
+++ b/contribute.Rmd
@@ -20,5 +20,5 @@ If it is your own paper, and you know how to fix the problem, you would be welco
 
 We are always in need of reviewers, and welcome you to add your name to the list of potential reviewers through [this form](https://docs.google.com/forms/d/e/1FAIpQLSf8EmpF85ASWqPHXqV0vdQd-GHhNBaAZZEYf4qxO3gTl-eGyA/viewform). Reviewers enhance the quality of the journal and help make the journal useful for the community.
 
-If you are interested in becoming an Associate Editor, you should directly contact the current editor, along with a list of keywords that describe your expertise chosen from the list provided by `rjtools::keywords`. Associate editors handle 2-4 articles per month, managing obtaining reviews, and writing a summary of the reviews for the Editor. 
+If you are interested in becoming an Associate Editor, you should directly contact the current editor, along with a list of keywords that describe your expertise chosen from the list provided by `rjtools::keywords`. Associate editors handle 2-4 articles per month, managing obtaining reviews, and writing a summary of the reviews for the Editor. You should have at least an undergraduate degree (in any field) and be an active R user. 
 
